--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "unpkg": "dist/v-nepalidatepicker.min.js",
   "files": [
     "dist/*",
-    "src/**/*.vue"
+    "src/**/*.*"
   ],
   "scripts": {
     "serve": "vue-cli-service serve dev/serve.js",
